@@ -52,6 +52,11 @@ override_dh_auto_install:
 	# don't acquire /dev/log to not conflict with other syslog daemons
 	$(call edit_config,'.root.elos.Scanner.SyslogScanner.SyslogPath = "/run/elos/dev-log"')
 
+override_dh_install:
+	dh_install
+	# Do not ship plantuml source files
+	find debian/ -name \*.plantuml -delete
+
 override_dh_installsystemd:
 	dh_installsystemd --name elosd
 
