@@ -1,6 +1,7 @@
 elos (0.57.3-8) unstable; urgency=medium
 
   * Do not compress .rst or .md files.
+  * Do not ship plantuml files.
 
  -- Isaac True <isaac.true@emlix.com>  Wed, 08 May 2024 15:13:47 +0200
 
